--- a/package.json
+++ b/package.json
@@ -9,5 +9,20 @@
   "devDependencies": {
     "nodemon": "^2.0.20",
     "prettier": "2.8.4"
-  }
+  },
+  "name": "cleanblog",
+  "description": "\"# cleanBlog\"",
+  "version": "1.0.0",
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aybikedalbul/cleanBlog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/aybikedalbul/cleanBlog/issues"
+  },
+  "homepage": "https://github.com/aybikedalbul/cleanBlog#readme"
 }
